--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_compile_options(-std=c++11)
 add_executable(mct src/main.cpp)
 add_executable(bmt_test test/band-matrix-test.cpp)
 add_executable(bsp_test test/bspline-test.cpp)
-# add_executable(itp_test test/interpolation-test.cpp)
+add_executable(itp_test test/interpolation-test.cpp)
 add_executable(mesh_test test/mesh-test.cpp)
 add_executable(util_test test/util-test.cpp)
 
@@ -14,7 +14,7 @@ include(CTest)
 enable_testing()
 add_test(band-matrix bmt_test)
 add_test(bspline bsp_test)
-# add_test(interp itp_test)
+add_test(interp itp_test)
 add_test(mesh mesh_test)
 add_test(util util_test)
 
