Generalize interpolation to higher order.
Use Eigen to compute b-spline weights in interpolation;
Update Mesh class, add more functionalities, and some related tests;
Add a dispatch by index helper function in util;
Add an Assertion class to make tests more structural;
Add 2D and 3D interpolation tests;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0.0)
 project(mct VERSION 0.1.0)
 
 add_compile_options(-std=c++11)
+# add_compile_options(-Wall)
+include_directories($ENV{HOME}/software/install/include)
 
 add_executable(mct src/main.cpp)
 add_executable(bmt_test test/band-matrix-test.cpp)
