Change debug macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(BSplineInterpolation VERSION 0.1.0)
 
 add_compile_options(-std=c++11)
 # add_compile_options(-Wall)
-add_definitions(-DDEBUG)
+add_definitions(-D_DEBUG)
 include_directories($ENV{HOME}/software/install/include)
 
 add_executable(bsp_test test/bspline-test.cpp)
