--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 project(BSplineInterpolation VERSION 0.1.0)
 
 add_compile_options(-std=c++11)
-# add_compile_options(-Wall)
+add_compile_options(-Wall)
 add_definitions(-D_DEBUG)
 include_directories($ENV{HOME}/software/install/include)
 
