--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(BSplineInterpolation VERSION 0.1.0)
 add_compile_options(-std=c++11)
 add_compile_options(-Wall)
 add_definitions(-D_DEBUG)
-include_directories($ENV{HOME}/software/install/include)
+include_directories(/usr/include/eigen3)
 
 add_executable(bsp_test test/bspline-test.cpp)
 add_executable(itp_test test/interpolation-test.cpp)
