Add nonuniform interpolation and its test...
Refacors Interpolation class in order to adopt new functionality.
And some minor bug fixed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(BSplineInterpolation VERSION 0.1.0)
 
 add_compile_options(-std=c++11)
 add_compile_options(-Wall)
+add_compile_options(-g)
 add_definitions(-D_DEBUG)
 include_directories(/usr/include/eigen3)
 
