--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,11 @@ add_executable(itp_test test/interpolation-test.cpp)
 add_executable(mesh_test test/mesh-test.cpp)
 add_executable(util_test test/util-test.cpp)
 add_executable(itp_speed_test test/interpolation-speed-test.cpp)
+add_executable(itp_template_test test/interpolation-template-test.cpp)
 
 target_compile_options(itp_speed_test PRIVATE -O2)
+target_compile_options(itp_template_test PRIVATE -O2)
+
 
 include(CTest)
 enable_testing()
@@ -31,6 +34,7 @@ add_test(intp-interp itp_test)
 add_test(intp-mesh mesh_test)
 add_test(intp-util util_test)
 add_test(intp-interp-speed itp_speed_test)
+add_test(intp-interp-template itp_template_test)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
