--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,14 @@ project(BSplineInterpolation VERSION 1.1.0)
 include(CTest)
 
 if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
+  set(CMAKE_BUILD_TYPE RelWithDebugInfo)
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if(MSVC)
-    set(CMAKE_CXX_FLAGS "/W4")
+    set(CMAKE_CXX_FLAGS "/W4 /EHsc")
 else()
     set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 endif()
@@ -33,14 +33,6 @@ foreach(test ${tests})
     message(STATUS ${test} " from source file " ${test_src_file})
 endforeach(test ${tests})
 message(STATUS)
-
-if(MSVC)
-    target_compile_options(interpolation-speed-test PRIVATE /O2)
-    target_compile_options(interpolation-template-test PRIVATE /O2)    
-else()
-    target_compile_options(interpolation-speed-test PRIVATE -O2)
-    target_compile_options(interpolation-template-test PRIVATE -O2)
-endif()
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
