With specialized linear solver (#5)
* Add more debug output.

* Add band matrix solver.

* Update cmakelists. Reduce band storage size.

* Use band matrix solver in place of eigen3's solver

Other changes include:
Check band matrix out-of-band-boundary when _DEBUG is defined.
Less output during calculating relative error when _TRACE not defined.
Some typo fixed.
Get rid of eigen3 dependency completely.

* Change readme and fix some typos

* Make it work in MSVC.

* Minor change in speed test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,24 @@
 cmake_minimum_required(VERSION 3.12.0)
-project(BSplineInterpolation VERSION 0.1.0)
-include(FetchContent)
+project(BSplineInterpolation VERSION 1.1.0)
 include(CTest)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE RelWithDebugInfo)
+endif()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_compile_options(-Wall)
-add_compile_options(-g)
-add_definitions(-D_DEBUG)
-
-find_package(Eigen3 3.0 CONFIG)
-
-message(STATUS)
-if(TARGET Eigen3::Eigen)
-    message(STATUS "Eigen3 v${EIGEN3_VERSION_STRING} found in ${EIGEN3_INCLUDE_DIR}")
-    else()
-    message(STATUS "Download Eigen 3.4.0 from its repository ...")
-    FetchContent_Declare(
-        eigen3
-        GIT_REPOSITORY https://gitlab.com/libeigen/eigen
-        GIT_TAG 34e5f34b391e9b964917d54139aae1ecf522d4e5 # 3.4.0
-    )
-    FetchContent_MakeAvailable(eigen3)
-    include_directories(${eigen3_SOURCE_DIR})
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "/W4 /EHsc")
+else()
+    set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 endif()
 
-list(APPEND tests util-test mesh-test bspline-test interpolation-test interpolation-speed-test interpolation-template-test)
+add_compile_definitions($<$<CONFIG:Debug>:_DEBUG>)
+# add_compile_definitions(_TRACE)
+
+list(APPEND tests util-test mesh-test band-matrix-and-solver-test bspline-test interpolation-test interpolation-speed-test interpolation-template-test)
 
 list(LENGTH tests test_num)
 message(STATUS)
@@ -35,16 +27,12 @@ enable_testing()
 foreach(test ${tests})
     string(JOIN "" test_src_file test/ ${test} .cpp)
     add_executable(${test} ${test_src_file})
-    target_link_libraries(${test} PRIVATE Eigen3::Eigen)
 
     string(JOIN "-" test_name intp ${test})
     add_test(${test_name} ${test})
     message(STATUS ${test} " from source file " ${test_src_file})
 endforeach(test ${tests})
 message(STATUS)
-
-target_compile_options(interpolation-speed-test PRIVATE -O2)
-target_compile_options(interpolation-template-test PRIVATE -O2)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
