Improve algorithm used in multi-dimension spline
When iterating through dimensions, rearrange weight mesh to make
the next dimension being contiguous in memory.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,24 @@ cmake_minimum_required(VERSION 3.12.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Add options according to compiler.
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "/W4 /EHsc")
+else()
+    set(debug_flags " -fsanitize=address")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL Clang)
+        set(CMAKE_CXX_FLAGS "-Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-padded")
+    else()
+        set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+    endif()
+    if(CMAKE_BUILD_TYPE STREQUAL Debug)
+        string(APPEND CMAKE_CXX_FLAGS ${debug_flags})
+    endif()
+endif()
+
 add_compile_definitions($<$<CONFIG:Debug>:_DEBUG>)
+# add_compile_definitions($<$<CONFIG:Debug>:_TRACE>)
 
 # Specify tests
 list(APPEND tests "util-test" "mesh-test" "band-matrix-and-solver-test" "bspline-test" "interpolation-test" "interpolation-speed-test" "interpolation-template-test")
@@ -22,4 +39,7 @@ foreach(test ${tests})
     add_test(${test_name} ${test})
     message(STATUS ${test} " from source file " ${test_src_file})
 endforeach(test ${tests})
+
+# target_compile_options(interpolation-speed-test PRIVATE $<$<CONFIG:Release>:-march=native>)
+
 message(STATUS)
