Can choose not to add dummy point in perodic case
- This behavior is controlled by macro "INTP_PERIODIC_NO_DUMMY_POINT"
- Prefix all macros with "INTP_", and rename some of them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,7 @@ install(
     FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}${VerPostfix}.cmake
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/cmake)
 
-# Set default build type to release.
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
-endif()
-
-# Requires c++17 and no compiler extension, but not mandetory.
+# Requires c++11, do not need any compiler extension.
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
